modifiy on package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://BatoulHassan.github.io/focalX_Task1",
+  "homepage": "http://BatoulHassan.github.io/Task1",
   "name": "task1",
   "version": "0.1.0",
   "private": true,
